* ApiBase::errorArrayToStatus(), deprecated in 1.43, has been removed.
* ZipDirectoryReader has been moved to the Wikimedia\Mime library.
  No callers outside that library are known.
* The MediaWiki\Config\MutableConfig interface now extends
  MediaWiki\Config\Config. Implementing MutableConfig without implementing
  Config is no longer possible.
* The hook OutputPageMakeCategoryLinks, deprecated in 1.43, has been removed.
* The methods Skin::getFooterIcons and ::makeFooterIcon are final and
  overriding is no longer supported.
* DatabaseBlock::getQueryInfo and ::getRangeCond, deprecated since 1.43, have
  been removed.
* The $schema parameters to DatabaseBlockStore::getQueryInfo() and
  ::getRangeCond() have been removed. They were documented as temporary
  migration support parameters. Support for ipb_* field aliases in
  DatabaseBlockStore::newFromRow(), which was meant to support the use of
  $schema, has been removed.
* Block::TYPE_ID has been removed. Use DatabaseBlockStore::newFromID().
* …

=== Deprecations in 1.44 ===

* Various static methods on ChangeTags, deprecated since 1.41, each now emit
  deprecation warnings. Use service access to the ChangeTagsStore instead:
  addTags(), defineTag(), deleteTagEverywhere(), getDisplayTableName(),
  getSoftwareTags(), getTags(), getTagsWithData(), listDefinedTags(),
  listExplicitlyDefinedTags(), listSoftwareActivatedTags(),
  listSoftwareDefinedTags(), makeTagSummarySubquery(), modifyDisplayQuery(),
  purgeTagCacheAll(), tagUsageStatistics(), and updateTags().
* WikiPage::doEditUpdates(), deprecated since 1.32, is now emitting warnings.
  Use DerivedPageDataUpdater::doUpdates() instead.
* IDatabase::setTransactionListener() is now deprecated without replacement.
* ILBFactory::setWaitForReplicationListener() is now deprecated without
  replacement.
* Maintenance::beginTransaction(), Maintenance::commitTransaction(),
  Maintenance::rollbackTransaction(), and Maintenance::waitForReplication()