@@ -6996,7 +6996,8 @@ class MainConfigSchema {
 			LocalUserRegistrationProvider::TYPE => [
 				'class' => LocalUserRegistrationProvider::class,
 				'services' => [
-					'UserFactory'
+					'UserFactory',
+					'ConnectionProvider',
 				]
 			]
 		],
